--- a/client/src/app/teacher/teacher.component.html
+++ b/client/src/app/teacher/teacher.component.html
@@ -13,33 +13,22 @@
     </button>
   </div>
   <div class="mt-4">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Name</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let teacher of teachers; let index = index">
-          <td style="vertical-align: middle">{{ index + 1 }}</td>
-          <td style="vertical-align: middle">
-            <button type="button" class="btn btn-link" [routerLink]="['/teacher', teacher.id]">
-              {{ teacher.name }}
-            </button>
-          </td>
-          <td>
-            <button
-              type="button"
-              class="btn btn-outline-danger"
-              (click)="removeTeacher(teacher)"
-            >
-              Delete
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="mb-3">
+      <input
+        class="form-control"
+        placeholder="Search..."
+        [(ngModel)]="searchText"
+        (input)="filterProjects(searchText)"
+      />
+    </div>
+    <ag-grid-angular
+      style="width: 100%; height: 400px"
+      class="ag-theme-alpine"
+      [rowData]="teachers"
+      [columnDefs]="columnDefs"
+      [defaultColDef]="defaultColDef"
+      (gridReady)="onGridReady($event)"
+    >
+    </ag-grid-angular>
   </div>
 </div>
